--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Movie Ticket</title>
+    <title>Movie Tickets</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
@@ -10,36 +10,32 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h2>Movie Ticket</h2>
+        <h2>Movie Tickets</h2>
       </div>
       <form id="movies">
         <div class="form-group">
-          <h3>Please select only one for each option!</h3>
-          <p>Please select the name of a movie:</p>
-          <input type="checkbox" name="movie" value="spiderman">SpiderMan(Non First Release)<br>
-          <input type="checkbox" name="movie" value="titanic">Titanic<br>
-          <input type="checkbox" name="movie" value="interstellar">interstellar<br>
-          <input type="checkbox" name="movie" value="godfather">godfather<br>
-          <input type="checkbox" name="movie" value="sixthsence">Sixth Sence<br>
-          <input type="checkbox" name="movie" value="casablanca">Casablanca<br>
-          <input type="checkbox" name="movie" value="avenger">Avenger<br>
+          <h4>Please select only one for each option!</h4>
+          <p>1.Please select the name of a movie that you would like to see:</p>
+          <input type="checkbox" name="movie" value="spiderman">Spider Man (First Release)<br>
+          <input type="checkbox" name="movie" value="lionKing">Lion King (First Release)<br>
+          <input type="checkbox" name="movie" value="godfather">Godfather (Discount!)<br>
         </div>
         <div class="form-group">
-          <p>Please select the time of the day that you would like to see the movie:</p>
-          <input type="checkbox" name="matinee" value="morning"> Morning: 10:00 AM (Discounted Ticket Price!)<br>
+          <p>2.Please select the time of the day that you would like to see the movie:</p>
+          <input type="checkbox" name="matinee" value="morning"> Morning: 10:00 AM (Discount!)<br>
           <input type="checkbox" name="matinee" value="afternoon">Afternoon: 2:00 PM<br>
           <input type="checkbox" name="matinee" value="evening">Evening: 8:00 PM<br>
         </div>
         <div class="form-group">
-          <p>Please select your age group:</p>
-          <input type="checkbox" name="age" value="child">Child<br>
+          <p>3.Please select your age group:</p>
+          <input type="checkbox" name="age" value="children">Children (<11) (Discount!)<br>
           <input type="checkbox" name="age" value="adult">Adult<br>
-          <input type="checkbox" name="age" value="senior">Senior (Discounted Ticket Price!)<br>
+          <input type="checkbox" name="age" value="senior">Senior (> 65) (Discount!)<br>
         </div>
        <button type="submit">Submit</button>
       </form>
-      <span id="work-responses">
-        <p><b>See ticket price:</b></p>
+      <span id="price">
+        <p><b>Your ticket price is </b></p>
       </span>
     </div>
   </body>
